Fix a number of issues with the build.
* Build release rather than debug on Windows
* Build a shared library rather than static as that is default for
  conda-forge
* Add test for the library during build
* Add test for the packaged executable as conda test
* Remove dependency on python and numpy

  This is a C/C++ library and an executable, it has no python relation
  or dependency. The python module is in the highspy package. I think
  these dependencies were included based on a misunderstanding of what
  this package is / upstream documentation.

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -16,18 +16,18 @@ requirements:
   build:
     - {{ compiler('cxx') }}
     - cmake >=3.15
-    - make  # [unix]
+    - ninja  # [win]
+    - make  # [not win]
     - {{ stdlib("c") }}
-  run:
-    # Should be limited to python >=3.8 but is not allowed
-    - python
-    - numpy
 
 test:
+  source_files:
+    - check/instances/afiro.mps
   commands:
     - test -f ${PREFIX}/include/highs/Highs.h  # [unix]
     - test -f ${PREFIX}/lib/libhighs.so  # [linux]
     - if not exist %LIBRARY_PREFIX%\include\highs\Highs.h (exit 1)  # [win]
+    - highs check/instances/afiro.mps
 
 about:
   home: https://github.com/ERGO-Code/HiGHS
