--- a/conda-forge.yml
+++ b/conda-forge.yml
@@ -6,4 +6,7 @@ conda_build:
 conda_forge_output_validation: true
 build_platform:
   osx_arm64: osx_64
+provider:
+  linux_aarch64: default
+  linux_ppc64le: default
 test: native_and_emulated
